--- a/styles/sass/pages/_training.scss
+++ b/styles/sass/pages/_training.scss
@@ -41,18 +41,18 @@
     }
 
     h4 {
-        margin-top: 30px;
+        margin-top: 50px;
         margin-bottom: 30px;
         text-transform: uppercase;
         background-color: $white;
-        color: $darkGray;
+        color: $black;
         display: inline-block;
         padding: 5px 15px 3px;
         border-radius: 8px;
     }
 
     img {
-        height: 128px;
+        height: 72px;
         max-width: 100%;
         margin-bottom: 30px;
     }
@@ -60,5 +60,5 @@
 
 p.courseDesc {
     padding: 0 30px;
-    text-align: justify;
+    text-align: left;
 }
